@startuml
class ShiroSecurityBean{
}

class ElementoBean{
}

class EquipoBean{
}

class HistoryServicesFactory{
}

class HistoryServiceImpl{
}

class Elemento{
}

class Equipo{
}

class Novedad{
}

class Laboratorio{
}

class MyBatisEquipoDAO{
}

class MyBatisElementoDAO{
}

class MyBatisNovedadDAO{
}

class MyBatisLaboratorioDAO{
}

interface HistoryService{
}

interface ElementoDAO{
}

interface EquipoDAO{
}

interface NovedadDAO{
}

interface LaboratorioDAO{
}

interface ElementoMapper{
}

interface EquipoMapper{
}

interface NovedadMapper{
}

interface LaboratorioMapper{
}


enum TipoElemento{
TORRE
PANTALLA
TECLADO
MOUSE
}


HistoryService <|.. HistoryServiceImpl

HistoryServiceImpl -left-> ElementoDAO : <<injected>>
HistoryServiceImpl -down-> EquipoDAO : <<injected>>
HistoryServiceImpl -down-> LaboratorioDAO : <<injected>>
HistoryServiceImpl -right-> NovedadDAO: <<injected>>


ElementoDAO <|.. MyBatisElementoDAO
EquipoDAO <|.. MyBatisEquipoDAO
NovedadDAO <|.. MyBatisNovedadDAO
LaboratorioDAO <|.. MyBatisLaboratorioDAO

MyBatisElementoDAO --> ElementoMapper : <<injected>>
MyBatisEquipoDAO --> EquipoMapper : <<injected>>
MyBatisLaboratorioDAO --> LaboratorioMapper : <<injected>>
MyBatisNovedadDAO --> NovedadMapper : <<injected>>

@enduml